on to footer section, now on policy

--- a/main.css
+++ b/main.css
@@ -28,6 +28,12 @@ https://i.postimg.cc/Hkx9YpMp/header-points.png
 https://i.postimg.cc/Gm5VrgH5/limited-time.png
 https://i.postimg.cc/qvb1f11Z/limited-time-head.png
 https://i.postimg.cc/c1FgBPCj/limited-time-head-pink.png
+https://i.postimg.cc/9XNYLzgG/buy-link.png
+https://i.postimg.cc/BQrcGk0b/visit-us-bottom.png
+https://i.postimg.cc/J4DcvmSS/visit-us-top.png
+https://i.postimg.cc/B63mGvdm/unsubscribe-link.jpg
+https://i.postimg.cc/dVFyjSTT/youtube-logo.png
+
 
 
 gif links
